fix: correção da branch para ci/cd

--- a/workflows/publish-nuget.yml
+++ b/workflows/publish-nuget.yml
@@ -2,7 +2,7 @@ name: Publicar NexusBus NuGet
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "master" ]
     paths:
       - 'NexusBus/**'  
 
