--- a/.github/workflows/publish-nuget.yml
+++ b/.github/workflows/publish-nuget.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ "master" ]
     paths:
-      - 'NexusBus/**'  
+      - 'NexusBus/**'
 
 jobs:
   build-and-publish:
@@ -16,15 +16,16 @@ jobs:
     - name: Setup .NET 10
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: 10.0.x 
+        dotnet-version: 10.0.x
 
     - name: Restore dependencies
-      run: dotnet restore NexusBus
+      run: dotnet restore NexusBus/NexusBus.csproj
 
     - name: Pack
       run: |
         dotnet pack NexusBus/NexusBus.csproj --no-restore -c Release -o out \
         -p:PackageVersion=1.0.${{ github.run_number }}
-        
+
     - name: Push to NuGet
-      run: dotnet nuget push "**/*.nupkg" --source "https://api.nuget.org/v3/index.json" --api-key ${{ secrets.NUGET_API_KEY }} --skip-duplicate
+      if: ${{ !env.ACT }}
+      run: dotnet nuget push "out/*.nupkg" --source "https://api.nuget.org/v3/index.json" --api-key ${{ secrets.NUGET_API_KEY }} --skip-duplicate
