--- a/ServicoPix.Infrastructure/ServicoPix.Infrastructure.csproj
+++ b/ServicoPix.Infrastructure/ServicoPix.Infrastructure.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NexusBus" Version="1.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ServicoPix.Domain\ServicoPix.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
