feat: add context

--- a/ServicoPix.Infrastructure/ServicoPix.Infrastructure.csproj
+++ b/ServicoPix.Infrastructure/ServicoPix.Infrastructure.csproj
@@ -7,11 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.1" />
     <PackageReference Include="NexusBus" Version="1.0.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\ServicoPix.Domain\ServicoPix.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Persistence\Mappings\" />
+    <Folder Include="Persistence\Repositories\" />
   </ItemGroup>
 
 </Project>
