--- a/ServicoPix.Infrastructure/ServicoPix.Infrastructure.csproj
+++ b/ServicoPix.Infrastructure/ServicoPix.Infrastructure.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="10.0.1" />
     <PackageReference Include="NexusBus" Version="1.0.2" />
   </ItemGroup>
 
