--- a/ServicoPix.Application/ServicoPix.Application.csproj
+++ b/ServicoPix.Application/ServicoPix.Application.csproj
@@ -6,4 +6,17 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="UseCases\SolicitarPix\Queries\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="12.1.1" />
+    <PackageReference Include="MediatR" Version="14.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ServicoPix.Domain\ServicoPix.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
