--- a/ServicoPix.Api/ServicoPix.Api.csproj
+++ b/ServicoPix.Api/ServicoPix.Api.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ServicoPix.Application\ServicoPix.Application.csproj" />
     <ProjectReference Include="..\ServicoPix.Infrastructure\ServicoPix.Infrastructure.csproj" />
   </ItemGroup>
 
