feat: adição da base do docker-componse

--- a/ServicoPix.Api/ServicoPix.Api.csproj
+++ b/ServicoPix.Api/ServicoPix.Api.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>fd395bfd-fbfa-4479-a700-7eeafe9a5cdb</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
