--- a/ServicoPix.Api/Dockerfile.original
+++ b/ServicoPix.Api/Dockerfile.original
@@ -1,25 +1,29 @@
+# See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
+
+# This stage is used when running from VS in fast mode (Default for Debug configuration)
 FROM mcr.microsoft.com/dotnet/aspnet:10.0 AS base
 USER $APP_UID
 WORKDIR /app
 EXPOSE 8080
 EXPOSE 8081
 
+
+# This stage is used to build the service project
 FROM mcr.microsoft.com/dotnet/sdk:10.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["ServicoPix.Api/ServicoPix.Api.csproj", "ServicoPix.Api/"]
-COPY ["ServicoPix.Application/ServicoPix.Application.csproj", "ServicoPix.Application/"]
-COPY ["ServicoPix.Domain/ServicoPix.Domain.csproj", "ServicoPix.Domain/"]
-COPY ["ServicoPix.Infrastructure/ServicoPix.Infrastructure.csproj", "ServicoPix.Infrastructure/"]
 RUN dotnet restore "./ServicoPix.Api/ServicoPix.Api.csproj"
 COPY . .
 WORKDIR "/src/ServicoPix.Api"
 RUN dotnet build "./ServicoPix.Api.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
+# This stage is used to publish the service project to be copied to the final stage
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
 RUN dotnet publish "./ServicoPix.Api.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
+# This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
