--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,9 +1,14 @@
 services:
+  postgres:
+    ports:
+      - "5432:5432"
+
   servicopix.api:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_HTTP_PORTS=8080
       - ASPNETCORE_HTTPS_PORTS=8081
+      - ConnectionStrings__DefaultConnection=Host=postgres;Port=5432;Database=servicopix;Username=postgres;Password=postgres
     ports:
       - "8080"
       - "8081"
