--- a/ServicoPix.Worker/ServicoPix.Worker.csproj
+++ b/ServicoPix.Worker/ServicoPix.Worker.csproj
@@ -10,4 +10,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.1" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\NexusBus\NexusBus.csproj" />
+  </ItemGroup>
 </Project>
