feat:: atualizar para 1.0.4 e robustecer consumo no worker

--- a/ServicoPix.Worker/appsettings.Development.json
+++ b/ServicoPix.Worker/appsettings.Development.json
@@ -1,7 +1,28 @@
 {
+  "NexusBus": {
+    "Provider": "RabbitMQ",
+    "RabbitMq": {
+      "HostName": "localhost",
+      "Port": 5672,
+      "UserName": "guest",
+      "Password": "guest",
+      "VirtualHost": "/",
+      "RetryCount": 30,
+
+      "ExchangeName": "",
+      "ExchangeType": "direct",
+      "DeclareTopology": false,
+
+      "EnableDeadLetter": false,
+      "DeadLetterExchangeName": "nexusbus.dlx",
+      "DeadLetterQueueSuffix": ".dlq"
+    }
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
+      "NexusBus": "Debug",
       "Microsoft.Hosting.Lifetime": "Information"
     }
   }
