--- a/ServicoPix.Worker/appsettings.json
+++ b/ServicoPix.Worker/appsettings.json
@@ -16,6 +16,20 @@
       "EnableDeadLetter": false,
       "DeadLetterExchangeName": "nexusbus.dlx",
       "DeadLetterQueueSuffix": ".dlq"
+    },
+    "Kafka": {
+      "BootstrapServers": "localhost:9092",
+      "ClientId": "nexusbus",
+      "GroupId": "nexusbus",
+      "AutoOffsetReset": "Earliest",
+
+      "EnableDeadLetter": false,
+      "DeadLetterTopicSuffix": ".dlq",
+
+      "SecurityProtocol": null,
+      "SaslMechanism": null,
+      "SaslUsername": null,
+      "SaslPassword": null
     }
   },
 
