--- a/ServicoPix.Infrastructure/ServicoPix.Infrastructure.csproj
+++ b/ServicoPix.Infrastructure/ServicoPix.Infrastructure.csproj
@@ -63,11 +63,11 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="10.0.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="10.0.1" />
-    <PackageReference Include="NexusBus" Version="1.0.4" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="10.0.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\NexusBus\NexusBus.csproj" />
     <ProjectReference Include="..\ServicoPix.Domain\ServicoPix.Domain.csproj" />
   </ItemGroup>
 
