feat(nexusbus): suporta RabbitMQ + Kafka juntos e melhora observabilidade (API/Worker)

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,7 +1,7 @@
 services:
   postgres:
-    ports:
-      - "5432:5432"
+    # No host port published to avoid conflicts on developer machines.
+    # Access Postgres via docker network as Host=postgres;Port=5432.
 
   rabbitmq:
     ports:
@@ -10,8 +10,12 @@ services:
 
   kafka:
     ports:
-      - "9092:9092"
-      - "9644:9644"
+      - "19092:9092"
+      - "19644:9644"
+
+  kafka-ui:
+    ports:
+      - "8081:8080"
 
   servicopix.api:
     environment:
